@@ -35,8 +35,8 @@ export(getManifest, getProbeInfo, getManifestInfo,
        getRed, getGreen, getMeth, getUnmeth,
        getBeta, getM, getCN, getMethSignal,
        getOOB, getSnpBeta,
-       dropMethylationLoci, getLocations, getAnnotation, mapToGenome,
-       getIslandStatus, getProbeType, getSnpInfo, addSnpInfo,
+       dropMethylationLoci, getLocations, getAnnotation, getAnnotationObject, mapToGenome,
+       getIslandStatus, getProbeType, getSnpInfo, addSnpInfo, dropLociWithSnps,
        normalize.illumina.control, bgcorrect.illumina,
        preprocessRaw, preprocessIllumina,
        preprocessSWAN, preprocessQuantile,
