@@ -3,6 +3,7 @@
 \alias{getLocations}
 \alias{getSnpInfo}
 \alias{addSnpInfo}
+\alias{dropLociWithSnps}
 \alias{getIslandStatus}
 \alias{getProbeType}
 \title{
@@ -19,8 +20,12 @@ getAnnotation(object, what = "everything", lociNames = NULL,
 getLocations(object, mergeManifest = FALSE,
              orderByLocation = FALSE, lociNames = NULL)
 
+getAnnotationObject(object)
+
 getSnpInfo(object, snpAnno = NULL)
 addSnpInfo(object, snpAnno = NULL)
+
+dropLociWithSnps(object, snps = c("CpG", "SBE"), maf = 0, snpAnno = NULL)
 
 getProbeType(object, withColor = FALSE)
 
@@ -42,6 +47,8 @@ getIslandStatus(object, islandAnno = NULL)
     signifies picking the default.}
   \item{withColor}{Should the return object have the type I probe color
     labelled?}
+  \item{snps}{The type of SNPs used.}
+  \item{maf}{Minor allelle fraction.}
   \item{islandAnno}{Like \code{snpAnno}, but for islands.}
 }
 
@@ -57,21 +64,34 @@ getIslandStatus(object, islandAnno = NULL)
   object.  Note that \code{RGChannelSet} does not impose a specific
   ordering on the methylation loci.
 
+  \code{getAnnotationObject} returns the annotation object, as opposed
+  to the annotation the object contains.  This is useful for printing
+  and examining the contents of the object.
+
   \code{getLocations} is a convenience function which returns
   \code{Locations} as a \code{GRanges} and which furthermore drops
   unmapped loci.  A user should not need to call this function, instead
   \code{mapToGenome} should be used to get genomic coordinates and
   \code{granges} to return those coordinates.
 
+  \code{getSnpInfo} is a conevnience function which gets a SNP DataFrame
+  containing information on which probes contains SNPs
+  where. \code{addSnpInfo} adds this information to the \code{rowData}
+  or \code{granges} of the object.  \code{dropLociWithSnps} is a
+  convenience function for removing loci with SNPs based on their MAF.
+  
   To see which options are available for \code{what}, simply print the
-  annotation object.
+  annotation object, possibly using \code{getAnnotationObject}.
 }
 
 \value{
 
   For \code{getAnnotation}, a \code{DataFrame} with the requested
   information.
-  
+
+  For \code{getAnnotationObject}, a \code{IlluminaMethylationAnnotation}
+  object. 
+
   For \code{getLocations}, a \code{GRanges} with the locations.
 
   For \code{getProbeType} and \code{getIslandStatus}, a \code{character}
@@ -81,6 +101,9 @@ getIslandStatus(object, islandAnno = NULL)
   information.  For \code{addSnpInfo}, an object of the same class as
   \code{object} but with the SNP information added to the elementMetadata
   of the granges of the object.
+
+  For \code{dropLociWithSnps} an object of the same kind as the input,
+  possibly with fewer loci.
 }
 
 \author{
